--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,25 +1,34 @@
-@use '../../styles/partials/mixins' as *;
-@use '../../styles/partials/variables' as *;
+// @use '../../styles/partials/mixins' as *;
+// @use '../../styles/partials/variables' as *;
 
-.banner {
-  // padding: 0 16px;
-  color: $Primary-Dark-Font;
-  &__text-wrapper {
-    padding: 0 1rem;
-    @include display-flex(column, center, center);
-  }
+// .banner {
+//   // padding: 0 16px;
+//   color: $Primary-Dark-Font;
+//   &__text-wrapper {
+//     padding: 0 1rem;
+//     margin: 0 0 1rem 0;
 
-  &__header {
-    text-align: center;
-  }
+//     @include display-flex(column, center, center);
+//   }
 
-  &__subheader-wrapper {
-    @include display-flex(row, flex-start, center);
-  }
+//   &__header {
+//     text-align: center;
+//   }
 
-  &__img {
-    width: 100%;
-    aspect-ratio: 16/9;
-    background-size: cover;
-  }
-}
+//   &__subheader-wrapper {
+//     @include display-flex(row, flex-start, center);
+//   }
+
+//   &__img {
+//     width: 100%;
+//     aspect-ratio: 16/9;
+//     background-size: cover;
+//   }
+
+//   &__button {
+//     background-color: #5bacc3;
+//     color: $Primary-Light;
+//     border-radius: 4px;
+//     padding: 5px 12px;
+//   }
+// }
