--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -8,9 +8,22 @@
 }
 
 h2 {
-  margin: 0.5rem 0.5rem;
+  margin: 0.5rem;
+  font-size: 24px;
+  line-height: 32px;
+  @include tablet {
+    font-size: 33px;
+    line-height: 44px;
+  }
 }
 
 p {
   margin: 0.4rem 0.4rem;
+  font-size: 13px;
+  line-height: 18px;
+
+  @include tablet {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
