--- a/src/components/MainStockChart/MainStockChart.scss
+++ b/src/components/MainStockChart/MainStockChart.scss
@@ -36,6 +36,7 @@
     border-radius: 4px;
     padding: 0 8px;
     height: 35px;
+    border: 1px solid $Primary-Dark-Font;
     margin: 0.5rem 0 0.1rem 0;
 
     @include tablet {
@@ -62,6 +63,7 @@
   &__select {
     width: 85%;
     height: 35px;
+    border: 1px solid $Primary-Dark-Font;
     @include tablet {
       width: 100%;
     }
