--- a/src/components/CompanyOverview/CompanyOverview.scss
+++ b/src/components/CompanyOverview/CompanyOverview.scss
@@ -6,16 +6,27 @@
   padding: 1rem;
   border-radius: 4px;
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
-  margin: 0 0 2rem 0;
   @include display-flex(column, center, center);
   &__header {
     text-align: center;
+    font-size: 24px;
+    margin: 0 0 0.5rem 0;
   }
   &__table {
+    border-top: 1px solid $Primary-Dark-Font;
     width: 80%;
 
     @include tablet {
       width: 90%;
+    }
+
+    td {
+      height: 35px;
+      text-align: center;
+    }
+
+    th {
+      height: 35px;
     }
   }
 }
