--- a/src/components/PosititonPanel/PositionPanel.scss
+++ b/src/components/PosititonPanel/PositionPanel.scss
@@ -6,7 +6,6 @@
   padding: 1rem;
   border-radius: 4px;
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
-  margin: 0 0 2rem 0;
 
   &__accountBalance-wrapper {
     @include display-flex(row, flex-start, center);
@@ -23,7 +22,11 @@
     padding: 1rem 0;
 
     &.first {
-      border-bottom: 1px solid #e1e1e1;
+      border-top: 1px solid $Primary-Dark-Font;
+      border-bottom: 1px solid $Primary-Dark-Font;
+    }
+    &.second {
+      border-bottom: 1px solid $Primary-Dark-Font;
     }
   }
   &__table {
@@ -32,6 +35,15 @@
     @include tablet {
       width: 90%;
     }
+    td {
+      text-align: center;
+    }
+  }
+
+  &__input--shares {
+    border-radius: 4px;
+    padding: 0 8px;
+    width: 100px;
   }
 
   &__button-wrapper {
