--- a/src/components/MainStockChart/MainStockChart.scss
+++ b/src/components/MainStockChart/MainStockChart.scss
@@ -60,8 +60,8 @@
     margin: 0.5rem 0 0.1rem 0;
 
     @include tablet {
-      width: 32%;
-      margin: 0;
+      width: 30%;
+      margin: 0 0.2rem;
       height: 40px;
     }
   }
@@ -90,6 +90,7 @@
     border: 1px solid $Primary-Dark-Font;
     @include tablet {
       width: 100%;
+      margin: 0 0.2rem;
       height: 40px;
     }
   }
@@ -106,10 +107,12 @@
 
     @include tablet {
       width: 30%;
+      height: 40px;
+      margin: 0 0.2rem;
       align-self: center;
     }
     @include desktop {
-      margin-left: 1rem;
+      margin-left: 0.2rem;
       align-self: center;
       height: 40px;
     }
