--- a/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
+++ b/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
@@ -6,7 +6,19 @@
     @include max-width;
     @include tablet {
       padding: 0 36px;
-      @include display-flex(row, space-between, flex-start);
+      @include display-flex(row, center, flex-start);
     }
+
+    &.middle {
+      margin: 1rem 0;
+      @include tablet {
+        margin: 2.25rem 0;
+      }
+    }
+  }
+  &-container {
+    width: 100%;
+    @include display-flex(row, center, flex-start);
+    @include max-width;
   }
 }
