--- a/src/components/AccountNumHoldings/AccountNumHoldings.scss
+++ b/src/components/AccountNumHoldings/AccountNumHoldings.scss
@@ -5,7 +5,11 @@
   padding: 0 16px;
 
   @include tablet {
-    padding: 0 36px;
+    width: 40%;
+    padding: 2rem;
+    border-radius: 4px;
+    border: 1px solid $Primary-Dark-Font;
+    box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   }
 
   &__header {
