--- a/src/components/AccountPieChart/AccountPieChart.scss
+++ b/src/components/AccountPieChart/AccountPieChart.scss
@@ -6,11 +6,16 @@
   //padding: 0 16px;
 
   @include tablet {
-    width: 50%;
-    //padding: 0 36px;
+    width: 55%;
+    padding: 2rem;
+    height: 445px;
+    border-radius: 4px;
+    border: 1px solid $Primary-Dark-Font;
+    box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   }
 
   &__header {
+    color: $Primary-Dark-Font;
     text-align: center;
   }
 
