--- a/src/components/RealizedPL/RealizedPL.scss
+++ b/src/components/RealizedPL/RealizedPL.scss
@@ -2,7 +2,12 @@
 @use '../../styles/partials/variables' as *;
 
 .realizedPL__chart {
+  padding: 1rem;
   @include tablet {
     width: 50%;
+    padding: 2rem;
+    border-radius: 4px;
+    border: 1px solid $Primary-Dark-Font;
+    box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   }
 }
