--- a/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
+++ b/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
@@ -3,7 +3,6 @@
 
 .portfoliodashboard {
   &-wrapper {
-    @include max-width;
     @include tablet {
       padding: 0 36px;
       @include display-flex(row, center, flex-start);
@@ -18,7 +17,7 @@
   }
   &-container {
     width: 100%;
-    @include display-flex(row, center, flex-start);
+    @include display-flex(row, space-between, flex-start);
     @include max-width;
   }
 }
