--- a/src/components/PortfolioList/PortfolioList.scss
+++ b/src/components/PortfolioList/PortfolioList.scss
@@ -6,9 +6,16 @@
   width: 100%;
 
   @include tablet {
-    width: 50%;
+    width: 40%;
   }
   &__table--header {
     @include display-flex(row, space-between, center);
+    width: 100%;
+  }
+
+  &__table--item {
+    width: 20%;
+    margin: 0;
+    text-align: center;
   }
 }
