--- a/src/components/RealizedPL/RealizedPL.scss
+++ b/src/components/RealizedPL/RealizedPL.scss
@@ -4,10 +4,17 @@
 .realizedPL__chart {
   padding: 1rem;
   @include tablet {
-    width: 50%;
+    width: 55%;
     padding: 2rem;
     border-radius: 4px;
     border: 1px solid $Primary-Dark-Font;
     box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
+  }
+
+  &--header {
+    color: $Primary-Dark-Font;
+    text-align: center;
+    border-bottom: 1px solid $Primary-Dark-Font;
+    padding-bottom: 0.5rem;
   }
 }
