--- a/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
+++ b/src/pages/PortfolioProDashboard/PortfolioProDashboard.scss
@@ -5,7 +5,7 @@
   &-wrapper {
     @include tablet {
       padding: 0 36px;
-      @include display-flex(row, center, flex-start);
+      @include display-flex(row, space-between, flex-start);
     }
 
     &.middle {
