--- a/src/components/Watchlist/Watchlist.scss
+++ b/src/components/Watchlist/Watchlist.scss
@@ -1,7 +1,7 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/variables' as *;
 
-.portfolio {
+.watchlist {
   padding: 16px;
   width: 100%;
   border-radius: 4px;
@@ -11,7 +11,7 @@
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
 
   @include tablet {
-    width: 40%;
+    width: 30%;
     padding: 2.25rem;
   }
 
@@ -28,7 +28,7 @@
   }
 
   &__table--item {
-    width: 20%;
+    width: 30%;
     margin: 0;
     text-align: center;
   }
