--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $desktop-width: 1280px;
 $max-content-width: 1200px;
 $max-hero-width: 1000px;
 $semi-tablet-width: 560px;
+$max-content-width-tablet: 1000px;
 
 $Primary-Light: #e0e1dd;
 $Primary-Dark-Backgronund: #415a77;
