--- a/src/components/PortfolioOverview/PortfolioOverview.scss
+++ b/src/components/PortfolioOverview/PortfolioOverview.scss
@@ -1,7 +1,7 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/variables' as *;
 
-.portfolio {
+.portfolioOverview {
   padding: 16px;
   width: 100%;
   border-radius: 4px;
@@ -12,14 +12,13 @@
   margin: 0.5rem 0;
 
   @include tablet {
-    width: 80%;
+    width: 45%;
     padding: 2.25rem;
   }
-
   @include desktop {
     width: 100%;
     padding: 2.25rem;
-    margin: 0;
+    margin: 0 0 0 0.5rem;
   }
 
   &__header {
@@ -27,16 +26,5 @@
     text-align: center;
     border-bottom: 1px solid White;
     padding-bottom: 0.5rem;
-  }
-
-  &__table--header {
-    @include display-flex(row, space-between, center);
-    width: 100%;
-  }
-
-  &__table--item {
-    width: 20%;
-    margin: 0;
-    text-align: center;
   }
 }
