--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -32,3 +32,11 @@
     margin-right: auto;
   }
 }
+
+@mixin max-width-tablet {
+  @include tablet {
+    max-width: $max-content-width-tablet;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
