--- a/src/components/PortfolioOverview/PortfolioOverview.scss
+++ b/src/components/PortfolioOverview/PortfolioOverview.scss
@@ -27,4 +27,53 @@
     border-bottom: 1px solid White;
     padding-bottom: 0.5rem;
   }
+
+  &__table--left {
+    @include display-flex(row, space-between, flex-start);
+    @include tablet {
+      @include display-flex(column, center, center);
+    }
+    @include desktop {
+      @include display-flex(column, center, flex-start);
+    }
+  }
+
+  &__table--right {
+    @include display-flex(row, space-between, flex-start);
+    @include tablet {
+      @include display-flex(column, center, center);
+    }
+    @include desktop {
+      @include display-flex(column, center, flex-start);
+    }
+  }
+
+  &__table {
+    width: 100%;
+    @include tablet {
+      @include display-flex(column, flex-start, center);
+    }
+
+    @include desktop {
+      @include display-flex(column, flex-start, flex-start);
+    }
+  }
+
+  th {
+    margin-right: 0.2rem;
+    @include tablet {
+      text-align: left;
+    }
+    @include desktop {
+      text-align: left;
+    }
+  }
+  tr {
+    width: 100%;
+    margin: 0.2rem;
+    @include display-flex(row, center, center);
+    @include desktop {
+      @include display-flex(row, flex-start, center);
+    }
+  }
 }
