--- a/src/components/DailyItem/DailyItem.scss
+++ b/src/components/DailyItem/DailyItem.scss
@@ -13,7 +13,7 @@
   &__link {
     width: 30%;
     text-decoration: none;
-    padding-right: 0.4rem;
+    padding-right: 1rem;
     @include display-flex(row, center, center);
   }
 
@@ -22,6 +22,6 @@
   }
 
   &__green {
-    color: limegreen;
+    color: #009900;
   }
 }
