--- a/src/components/DashboardCommentsList/DashboardCommentsList.scss
+++ b/src/components/DashboardCommentsList/DashboardCommentsList.scss
@@ -1,19 +1,29 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/variables' as *;
 
-.commentslist {
+.dashCommentsList {
   border: 2px solid $Primary-Dark-Font;
   border-radius: 4px;
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   padding: 1rem;
+  width: 100%;
+
+  @include tablet {
+    width: 49%;
+  }
 
   &__header {
     color: $Primary-Dark-Font;
+    text-align: center;
     border-bottom: 1px solid $Primary-Dark-Font;
   }
 
   &__form {
     width: 100%;
+
+    @include desktop {
+      width: 70%;
+    }
 
     &--input {
       width: 77%;
@@ -43,6 +53,26 @@
     text-align: center;
     margin: 1rem;
   }
+
+  &__trending-wrapper {
+    @include display-flex(row, center, center);
+
+    @include desktop {
+      margin-right: 1rem;
+    }
+  }
+
+  &__trending--icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  &__form-wrapper {
+    @include desktop {
+      @include display-flex(row, space-between, center);
+    }
+  }
+
   &__list {
     height: 400px;
     overflow: hidden;
