--- a/src/components/NewsList/NewsList.scss
+++ b/src/components/NewsList/NewsList.scss
@@ -13,5 +13,8 @@
   }
   &__list {
     @include display-flex(column, space-between, flex-start);
+    height: 437px;
+    overflow: hidden;
+    overflow-y: scroll;
   }
 }
