--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -88,4 +88,36 @@
       @include display-flex(row, space-between, flex-start);
     }
   }
+
+  &--news {
+    width: 100%;
+    @include tablet {
+      @include display-flex(row, center, flex-start);
+    }
+    @include desktop {
+      width: 49%;
+    }
+  }
+}
+
+.dashboard__social {
+  @include max-width;
+  padding: 0 1rem;
+  margin: 1rem 0;
+
+  @include tablet {
+    padding: 0 2.25rem;
+  }
+
+  @include desktop {
+    padding: 0;
+  }
+  &-container {
+    @include display-flex(column, center, flex-start);
+
+    @include tablet {
+      margin: 2.25rem 0;
+      @include display-flex(row, space-between, center);
+    }
+  }
 }
