Change all list to be scrollable

--- a/src/components/DailyGainers/DailyGainers.scss
+++ b/src/components/DailyGainers/DailyGainers.scss
@@ -39,4 +39,10 @@
     margin: 0;
     text-align: center;
   }
+
+  &__list {
+    height: 411px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
 }
