--- a/src/components/NewsList/NewsList.scss
+++ b/src/components/NewsList/NewsList.scss
@@ -9,6 +9,7 @@
 
   &__header {
     color: $Primary-Dark-Font;
+    text-align: center;
     border-bottom: 1px solid $Primary-Dark-Font;
   }
   &__list {
