--- a/src/components/Watchlist/Watchlist.scss
+++ b/src/components/Watchlist/Watchlist.scss
@@ -38,4 +38,10 @@
     margin: 0;
     text-align: center;
   }
+
+  &__list {
+    height: 300px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
 }
