--- a/src/components/DailyLosers/DailyLosers.scss
+++ b/src/components/DailyLosers/DailyLosers.scss
@@ -39,4 +39,10 @@
     margin: 0;
     text-align: center;
   }
+
+  &__list {
+    height: 411px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
 }
