Add Transactions List To Dashboard

--- a/src/components/DashboardComment/DashboardComment.scss
+++ b/src/components/DashboardComment/DashboardComment.scss
@@ -22,7 +22,7 @@
   }
 
   &__text-wrapper {
-    width: 85%;
+    width: 90%;
   }
 
   &__text--header {
@@ -46,5 +46,5 @@
 }
 
 .blue {
-  color: $Primary-Dark-Font;
+  color: #afafaf;
 }
