--- a/src/pages/PortfolioProPage/PortfolioProPage.scss
+++ b/src/pages/PortfolioProPage/PortfolioProPage.scss
@@ -13,13 +13,21 @@
   &__header {
     color: $Primary-Dark-Font;
     font-size: 3rem;
-    margin: 2rem;
+    margin: 2rem 0 0 0;
     padding: 0 16px;
     width: 90%;
     text-align: center;
 
     @include tablet {
       padding: 0 36px;
+      margin: 3rem 0 0 0;
+    }
+  }
+
+  &__header--img {
+    margin: 2rem 0 0 0;
+    @include tablet {
+      margin: 3rem 0 0 0;
     }
   }
 
