--- a/src/components/LeftStockChart/LeftStockChart.scss
+++ b/src/components/LeftStockChart/LeftStockChart.scss
@@ -6,7 +6,7 @@
   padding: 16px 16px;
   color: $Primary-Dark-Font;
   @include tablet {
-    margin: 2.25rem 0;
+    margin: 2.25rem 0 0 0;
     padding: 0 36px;
   }
   @include desktop {
