--- a/src/components/TransactionList/TransactionList.scss
+++ b/src/components/TransactionList/TransactionList.scss
@@ -26,4 +26,9 @@
     text-align: center;
     font-size: 18px;
   }
+  &__list {
+    height: 365px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
 }
