--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -9,48 +9,15 @@
 }
 
 .dashboard__header {
-  @include max-width;
-
-  &-container {
-    margin: 16px 0;
-    padding: 0 16px;
-
-    @include tablet {
-      margin: 2.25rem 0;
-      padding: 0 2.25rem;
-    }
-  }
-
   &--title {
+    margin: 1rem 0;
     font-size: 2rem;
     color: $Primary-Dark-Font;
     text-align: center;
     text-decoration: underline;
     @include tablet {
+      margin: 2.25rem 0 0 0;
       font-size: 2.5rem;
-    }
-  }
-
-  &-wrapper {
-    margin: 1rem 0;
-    @include display-flex(column, flex-start, flex-start);
-
-    @include tablet {
-      @include display-flex(row, space-between, center);
-    }
-  }
-
-  &--link {
-    color: #22395d;
-    text-decoration: none;
-    margin: 0.2rem 0;
-
-    @include tablet {
-      margin: 0;
-    }
-
-    &:hover {
-      text-decoration: underline;
     }
   }
 }
