--- a/src/components/TraderTransactionList/TraderTransactionList.scss
+++ b/src/components/TraderTransactionList/TraderTransactionList.scss
@@ -1,7 +1,7 @@
 @use '../../styles/partials/mixins' as *;
 @use '../../styles/partials/variables' as *;
 
-.transactions {
+.traderTransactions {
   width: 100%;
 
   @include tablet {
@@ -9,7 +9,7 @@
     border-radius: 4px;
     border: 1px solid $Primary-Dark-Font;
     box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
-    width: 40%;
+    width: 100%;
   }
   &__header {
     color: $Primary-Dark-Font;
@@ -27,7 +27,7 @@
     font-size: 18px;
   }
   &__list {
-    height: 330px;
+    height: 230px;
     overflow: hidden;
     overflow-y: scroll;
   }
