Fix TraderPro Bugs

--- a/src/components/AccountHeader/AccountHeader.scss
+++ b/src/components/AccountHeader/AccountHeader.scss
@@ -7,9 +7,11 @@
   &-container {
     margin: 16px 0;
     padding: 0 16px;
+    width: 100%;
 
     @include tablet {
-      margin: 1rem 0;
+      width: 100%;
+      margin: 1rem 0 2.25rem 0;
       padding: 0 2.25rem;
     }
   }
@@ -19,6 +21,7 @@
     @include display-flex(column, flex-start, flex-start);
 
     @include tablet {
+      width: 100%;
       @include display-flex(row, space-between, center);
     }
   }
