--- a/src/pages/PortfolioProPage/PortfolioProPage.scss
+++ b/src/pages/PortfolioProPage/PortfolioProPage.scss
@@ -2,7 +2,7 @@
 @use '../../styles/partials/variables' as *;
 
 .portfoliopro {
-  @include display-flex(column, center, center);
+  //@include display-flex(column, center, center);
 
   &__header-wrapper {
     width: 100%;
