--- a/src/pages/TraderProPage/TraderProPage.scss
+++ b/src/pages/TraderProPage/TraderProPage.scss
@@ -2,7 +2,7 @@
 @use '../../styles/partials/variables' as *;
 
 .traderpro {
-  @include display-flex(column, center, center);
+  //@include display-flex(column, center, center);
 
   &__header-wrapper {
     width: 100%;
@@ -45,10 +45,11 @@
     border: 2px solid $Primary-Dark-Font;
     box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
     // margin: 0 1rem 1rem 1rem;
-    margin: 1rem;
+    // margin: 1rem;
 
     @include tablet {
-      width: 95%;
+      width: 100%;
+
       //margin: 0 0 2.25rem 0;
       padding: 2.25rem 2.25rem 1.5rem 2.25rem;
     }
