Fix Layout Changes to Portfolio Pro DashBoard Page

--- a/src/components/PortfolioList/PortfolioList.scss
+++ b/src/components/PortfolioList/PortfolioList.scss
@@ -7,12 +7,12 @@
   border-radius: 4px;
   background-color: $Primary-Dark-Backgronund;
   color: white;
-  border: 1px solid White;
+  border: 2px solid #192841;
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   margin: 0.5rem 0;
 
   @include tablet {
-    width: 80%;
+    width: 100%;
     padding: 2.25rem;
   }
 
