--- a/src/components/PortfolioOverview/PortfolioOverview.scss
+++ b/src/components/PortfolioOverview/PortfolioOverview.scss
@@ -2,60 +2,46 @@
 @use '../../styles/partials/variables' as *;
 
 .portfolioOverview {
-  padding: 16px;
-  width: 100%;
-  border-radius: 4px;
-  background-color: $Primary-Dark-Backgronund;
-  color: white;
-  border: 1px solid White;
-  box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
-  margin: 0.5rem 0;
+  @include max-width;
 
-  @include tablet {
-    width: 45%;
-    padding: 2.25rem;
-  }
-  @include desktop {
+  &-container {
+    padding: 16px;
     width: 100%;
-    padding: 2.25rem;
-    margin: 0 0 0 0.5rem;
+    border-radius: 4px;
+    background-color: $Primary-Dark-Backgronund;
+    color: white;
+    border: 1px solid White;
+    box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
+    margin: 0.5rem 0;
+    @include display-flex(row, space-between, center);
+
+    @include tablet {
+      width: 100%;
+      padding: 2rem;
+    }
+    @include desktop {
+      width: 100%;
+      padding: 2rem;
+      margin: 0 0 1rem 0;
+    }
   }
 
   &__header {
+    width: 20%;
     color: White;
     text-align: center;
     border-bottom: 1px solid White;
     padding-bottom: 0.5rem;
   }
 
-  &__table--left {
-    @include display-flex(row, space-between, flex-start);
-    @include tablet {
-      @include display-flex(column, center, center);
-    }
-    @include desktop {
-      @include display-flex(column, center, flex-start);
-    }
-  }
-
-  &__table--right {
-    @include display-flex(row, space-between, flex-start);
-    @include tablet {
-      @include display-flex(column, center, center);
-    }
-    @include desktop {
-      @include display-flex(column, center, flex-start);
-    }
-  }
-
   &__table {
-    width: 100%;
+    width: 75%;
     @include tablet {
-      @include display-flex(column, flex-start, center);
+      @include display-flex(row, space-around, center);
     }
 
     @include desktop {
-      @include display-flex(column, flex-start, flex-start);
+      @include display-flex(row, space-around, center);
     }
   }
 
@@ -70,7 +56,6 @@
   }
   tr {
     width: 100%;
-    margin: 0.2rem;
     @include display-flex(row, center, center);
     @include desktop {
       @include display-flex(row, flex-start, center);
