--- a/src/components/Watchlist/Watchlist.scss
+++ b/src/components/Watchlist/Watchlist.scss
@@ -6,13 +6,13 @@
   width: 100%;
   border-radius: 4px;
   background-color: $Primary-Dark-Backgronund;
+  border: 2px solid #192841;
   color: white;
-  border: 1px solid White;
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   margin: 0.5rem 0;
 
   @include tablet {
-    width: 45%;
+    width: 100%;
     padding: 2.25rem;
   }
   @include desktop {
