--- a/src/components/PortfolioOverview/PortfolioOverview.scss
+++ b/src/components/PortfolioOverview/PortfolioOverview.scss
@@ -3,6 +3,11 @@
 
 .portfolioOverview {
   @include max-width;
+  padding: 0 1rem;
+
+  @include tablet {
+    padding: 0 2.25rem;
+  }
 
   &-container {
     padding: 16px;
@@ -13,13 +18,15 @@
     border: 1px solid White;
     box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
     margin: 0.5rem 0;
-    @include display-flex(row, space-between, center);
+    @include display-flex(column, center, center);
 
     @include tablet {
       width: 100%;
       padding: 2rem;
     }
     @include desktop {
+      @include display-flex(row, flex-start, center);
+
       width: 100%;
       padding: 2rem;
       margin: 0 0 1rem 0;
@@ -27,7 +34,10 @@
   }
 
   &__header {
-    width: 20%;
+    width: 100%;
+    @include desktop {
+      width: 20%;
+    }
     color: White;
     text-align: center;
     border-bottom: 1px solid White;
@@ -36,16 +46,36 @@
 
   &__table {
     width: 75%;
+    @include display-flex(column, flex-start, flex-start);
     @include tablet {
       @include display-flex(row, space-around, center);
     }
+
+    @include desktop {
+      @include display-flex(row, space-between, center);
+      margin-left: 2rem;
+    }
+  }
+
+  &__table--first {
+    @include display-flex(column, flex-start, flex-start);
 
     @include desktop {
       @include display-flex(row, space-around, center);
     }
   }
 
+  &__table--second {
+    @include display-flex(column, flex-start, flex-start);
+
+    @include desktop {
+      @include display-flex(row, space-around, center);
+      margin-right: 5rem;
+    }
+  }
+
   th {
+    text-align: left;
     margin-right: 0.2rem;
     @include tablet {
       text-align: left;
@@ -55,10 +85,16 @@
     }
   }
   tr {
-    width: 100%;
-    @include display-flex(row, center, center);
+    //width: 100%;
+    text-align: left;
+    @include display-flex(row, flex-start, flex-start);
+
+    @include tablet {
+      @include display-flex(row, flex-start, flex-start);
+    }
     @include desktop {
       @include display-flex(row, flex-start, center);
+      margin-right: 0.8rem;
     }
   }
 }
