--- a/src/components/Friends/Friends.scss
+++ b/src/components/Friends/Friends.scss
@@ -7,8 +7,10 @@
   box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
   padding: 1rem;
   width: 100%;
+  margin-bottom : 1rem;
   @include tablet {
-    width: 30%;
+    width: 100%;
+    margin-bottom: 2rem;
   }
 
   &__header {
@@ -17,7 +19,7 @@
     border-bottom: 1px solid $Primary-Dark-Font;
   }
   &__list {
-    height: 400px;
+    height: 246px;
     overflow: hidden;
     overflow-y: scroll;
   }
