--- a/src/components/FriendRequest/FriendRequest.scss
+++ b/src/components/FriendRequest/FriendRequest.scss
@@ -28,8 +28,7 @@
 
         &.approve {
             height: 2.6rem;
-            width: 2.6
-            rem;
+            width: 2.6rem;
         }
     }
 
