--- a/src/components/Friend/Friend.scss
+++ b/src/components/Friend/Friend.scss
@@ -3,11 +3,11 @@
 
 .friend {
   color: $Primary-Dark-Font;
-  @include display-flex(row, space-between, flex-start);
+  @include display-flex(row, center, flex-start);
   width: 100%;
 
   &__img-wrapper {
-    width: 25%;
+    width: 20%;
   }
 
   &__img {
@@ -19,7 +19,7 @@
   }
 
   &__text-wrapper {
-    width: 75%;
+    width: 60%;
     @include display-flex(row, flex-start, center);
   }
 }
