--- a/src/components/Features/Features.scss
+++ b/src/components/Features/Features.scss
@@ -31,6 +31,8 @@
     @include max-width;
     width: 100%;
     box-shadow: 0px 4px 7px rgba(19, 24, 44, 0.2);
+    border: 2px solid $Primary-Dark-Font;
+    border-radius: 4px;
 
     @include tablet {
       margin-top: 2rem;
@@ -42,6 +44,7 @@
       &.middle {
         background-color: $Primary-Dark-Backgronund;
         border-radius: 4px;
+        border: 2px solid #192841;
       }
     }
   }
